установлена кодировка utf-8 для отображения кириллицы

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta charset="utf-8"></meta>
     <script src="assets/scripts/aframe1.0.4.min.js"></script>
     <script src="assets/scripts/aframe-extras5.0.0.min.js"></script>
     <script src="assets/scripts/aframe-ar.js"></script>
